force-app/main/default/objects/SubscriptionPlan__c/SubscriptionPlan__c.object-meta.xml
<CustomObject>
    <description
  >Subscription Plan fot the Listing, it could be either external (meaning that the billing management is managed outside of Appexchange) or Recurly (meaning that the Recurly API will be used instead).</description>
    <label>SubscriptionPlan</label>
    <nameField>
        <label>SubscriptionPlan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SubscriptionPlans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>