force-app/main/default/objects/SubscriptionPlan__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >A subscription plan will be marked as inactive when it&apos;s deleted from Stripe side.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>