force-app/main/default/objects/SubscriptionPlan__c/fields/AdditionalDetails__c.field-meta.xml
<CustomField>
    <fullName>AdditionalDetails__c</fullName>
    <description>Additional details for the subscription plan.</description>
    <inlineHelpText
  >Optionally highlight any additional information about the pricing for this application to customers.</inlineHelpText>
    <label>Additional Details</label>
    <type>TextArea</type>
</CustomField>