force-app/main/default/objects/SubscriptionPlan__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <description>The currency for the charge.</description>
    <inlineHelpText>The currency for the charge.</inlineHelpText>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>CAD</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>JPY</fullName>
            </value>
            <value>
                <fullName>AUD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>