force-app/main/default/objects/SubscriptionPlan__c/fields/CustomUnits__c.field-meta.xml
<CustomField>
    <fullName>CustomUnits__c</fullName>
    <description
  >Custom units used when custom unit type is selected.</description>
    <inlineHelpText
  >Custom units used when custom unit type is selected.</inlineHelpText>
    <label>CustomUnits</label>
    <length>40</length>
    <type>Text</type>
</CustomField>