force-app/main/default/objects/SubscriptionPlan__c/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <description
  >Determines what order to display the multiple plans to the customer</description>
    <label>Display Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>