force-app/main/default/objects/SubscriptionPlan__c/fields/External_SubscriptionPlan_Id__c.field-meta.xml
<CustomField>
    <fullName>External_SubscriptionPlan_Id__c</fullName>
    <description>The External Id</description>
    <inlineHelpText>The External Id</inlineHelpText>
    <label>External Subscription Plan Id</label>
    <externalId>true</externalId>
    <unique>true</unique>
    <caseSensitive>true</caseSensitive>
    <length>36</length>
    <type>Text</type>
</CustomField>