force-app/main/default/objects/SubscriptionPlan__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <label>ExternalId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>