force-app/main/default/objects/SubscriptionPlan__c/fields/Livemode__c.field-meta.xml
<CustomField>
    <fullName>Livemode__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Specifies if plan is in live mode.</description>
    <label>Live mode</label>
    <type>Checkbox</type>
</CustomField>