force-app/main/default/objects/SubscriptionPlan__c/fields/OfferTieredOrDiscPricing__c.field-meta.xml
<CustomField>
    <fullName>OfferTieredOrDiscPricing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OfferTieredOrDiscPricing</label>
    <type>Checkbox</type>
</CustomField>