force-app/main/default/objects/SubscriptionPlan__c/fields/RequireCustomerToContactMe__c.field-meta.xml
<CustomField>
    <fullName>RequireCustomerToContactMe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RequireCustomerToContactMe</label>
    <type>Checkbox</type>
</CustomField>