force-app/main/default/objects/SubscriptionPlan__c/fields/SetupFee__c.field-meta.xml
<CustomField>
    <fullName>SetupFee__c</fullName>
    <label>SetupFee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>