force-app/main/default/objects/SubscriptionPlan__c/fields/SyncStatus__c.field-meta.xml
<CustomField>
    <fullName>SyncStatus__c</fullName>
    <description
  >Status after the synchronization with the billing API.</description>
    <inlineHelpText
  >Status after the synchronization with the billing API.</inlineHelpText>
    <label>SyncStatus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CreateFailed</fullName>
            </value>
            <value>
                <fullName>UpdateFailed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>