force-app/main/default/objects/SubscriptionPlan__c/fields/TrialLengthInDays__c.field-meta.xml
<CustomField>
    <fullName>TrialLengthInDays__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Trial days available for this Plan</description>
    <label>Trial</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>