force-app/main/default/objects/SubscriptionPlan__c/fields/Units__c.field-meta.xml
<CustomField>
    <fullName>Units__c</fullName>
    <description>Units related to the charge.</description>
    <inlineHelpText>Units related to the charge.</inlineHelpText>
    <label>Units</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>