force-app/main/default/objects/SubscriptionPlan__c/recordTypes/External.recordType-meta.xml
<RecordType>
    <fullName>External</fullName>
    <active>true</active>
    <description
  >Represents that the billing management is managed outside of Appexchange</description>
    <label>External</label>
</RecordType>