force-app/main/default/objects/SubscriptionPlan__c/recordTypes/SelfCheckout.recordType-meta.xml
<RecordType>
    <fullName>SelfCheckout</fullName>
    <active>true</active>
    <description
  >Represents that the billing management used is a Self Checkout system.</description>
    <label>SelfCheckout</label>
</RecordType>